@@ -1,5 +1,12 @@
 2001-10-03  Sam Steingold  <sds@gnu.org>
 
+	limit DEFTYPE depth
+	* predtype.d (expand_deftype): do not iterate more
+	than (or *DEFTYPE-DEPTH-LIMIT* MOST-POSITIVE-FIXNUM) times
+	* constsym.d, spvw.d (*DEFTYPE-DEPTH-LIMIT*): added
+
+2001-10-03  Sam Steingold  <sds@gnu.org>
+
 	EXPAND-DEFTYPE & TYPE-EXPAND accept an optional argument
 	* predtype.d (expand_deftype): take the second arg once_p
 	(EXPAND-DEFTYPE): take the second optional arg once-p
